correction du contraste du titre

--- a/css/index.css
+++ b/css/index.css
@@ -295,12 +295,6 @@ nav li a:hover {
   z-index: 1;
   opacity: 1;
 }
-.intro_overlay {
-  position: absolute;
-  inset: 0;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 1;
-}
 .intro_img-profile {
   position: relative;
   z-index: 2;
@@ -311,6 +305,7 @@ nav li a:hover {
   position: relative;
   z-index: 3;
   color: white;
+  background-color: rgba(0, 0, 0, 0.1);
   margin-left: 12%;
   bottom: 92%;
   text-shadow: -1px -1px 0 black, 0 -1px 0 black, 1px -1px 0 black, -1px 0 0 black, 1px 0 0 black, -1px 1px 0 black, 0 1px 0 black, 1px 1px 0 black;
